correção do caminho java

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
-        "pooExe2",
         "pooExe1",
+        "pooExe2",
+        "pooVetores/entities"
     ]
 }
